@@ -1,5 +1,6 @@
 package com.webapp.bankingportal.config;
 
+import java.util.Arrays;
 import java.util.List;
 import java.util.concurrent.TimeUnit;
 
@@ -11,8 +12,6 @@ import org.springframework.context.annotation.Configuration;
 
 import com.github.benmanes.caffeine.cache.Caffeine;
 
-
-
 @Configuration
 @EnableCaching
 public class CacheConfig {
@@ -20,7 +19,7 @@ public class CacheConfig {
     @Bean
     public CacheManager cacheManager() {
         CaffeineCacheManager cacheManager = new CaffeineCacheManager();
-        cacheManager.setCacheNames(List.of("otpAttempts")); // Define the cache name
+        cacheManager.setCacheNames(Arrays.asList("otpAttempts")); // Define the cache name
         cacheManager.setCaffeine(caffeineConfig());
         return cacheManager;
     }
